<resources>
    <string name="app_name">FlexiCalculator</string>
    <string name="toolbar_name">FlexiCalculator</string>
    <string name="fragment_calculator">Calculate</string>
    <string name="fragment_converter">Convert</string>
    <string name="fragment_voice">Speak</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>

    <string name="point">.</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="divide">\u00f7</string>
    <string name="multiply">\u00d7</string>
    <string name="subtract">\u2212</string>
    <string name="add">+</string>
    <string name="equal">=</string>

    <string name="delete">DEL</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln\</string>
    <string name="power">x<sup><small>y</small></sup></string>

    <string name="lsh">lsh</string>
    <string name="rsh">rsh</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="xor">xor</string>

    <string name="modulus">mod</string>
    <string name="percentage">%</string>
    <string name="factorial">n!</string>
    <string name="square_root">\u221a</string>
    <string name="square">x\u00b2</string>

    <string name="hexadecimal">hex</string>
    <string name="decimal">dec</string>
    <string name="octal">oct</string>
    <string name="binary">bin</string>

    <string name="degree">deg</string>
    <string name="radian">rad</string>

    <string name="swap">Swap</string>

    <string-array name="categories">
        <item>Volume</item>
        <item>Weight</item>
        <item>Length</item>
        <item>Area</item>
        <item>Fuel Economy</item>
        <item>Temperature</item>
        <item>Pressure</item>
        <item>Energy</item>
        <item>Power</item>
        <item>Torque</item>
        <item>Speed</item>
        <item>Time</item>
        <item>Data</item>
        <item>Angle</item>
    </string-array>

    <string-array name="volume">
        <item>Milliliters</item>
        <item>Liters</item>
        <item>Cubic Centimeters</item>
        <item>Cubic Meters</item>
        <item>Cubic Inches</item>
        <item>Cubic Feet</item>
        <item>Cubic Yards</item>
        <item>Teaspoons (US)</item>
        <item>Tablespoons (US)</item>
        <item>Fluid Ounces (US)</item>
        <item>Cups (US)</item>
        <item>Pints (US)</item>
        <item>Quarts (US)</item>
        <item>Gallons (US)</item>
        <item>Teaspoons (UK)</item>
        <item>Tablespoons (UK)</item>
        <item>Fluid Ounces (UK)</item>
        <item>Cups (UK)</item>
        <item>Pints (UK)</item>
        <item>Quarts (UK)</item>
        <item>Gallons (UK)</item>
    </string-array>

    <string-array name="weight">
        <item>Carats</item>
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Dekagrams</item>
        <item>Hectograms</item>
        <item>Kilograms</item>
        <item>Metric Tonnes</item>
        <item>Ounces</item>
        <item>Pounds</item>
        <item>Stones</item>
        <item>Short Tons (US)</item>
        <item>Long Tons (UK)</item>
    </string-array>

    <string-array name="length">
        <item>Nanometers</item>
        <item>Microns</item>
        <item>Millimeters</item>
        <item>Centimeters</item>
        <item>Meters</item>
        <item>Kilometers</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Miles</item>
        <item>Nautical Miles</item>
    </string-array>

    <string-array name="area">
        <item>Square Millimeters</item>
        <item>Square Centimeters</item>
        <item>Square Meters</item>
        <item>Square Kilometers</item>
        <item>Acres</item>
        <item>Hectares</item>
        <item>Square Inches</item>
        <item>Square Feet</item>
        <item>Square Yards</item>
        <item>Square Miles</item>
    </string-array>

    <string-array name="fuel_economy">
        <item>Miles per Gallon (US)</item>
        <item>Miles per Gallon (UK)</item>
        <item>Kilometers per Liter</item>
        <item>Liters per 100 Kilometers</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="pressure">
        <item>Atmospheres</item>
        <item>Bars</item>
        <item>Pascals</item>
        <item>Kilopascals</item>
        <item>Pounds per Square Inch</item>
        <item>Torrs</item>
    </string-array>

    <string-array name="energy">
        <item>Electron Volts</item>
        <item>Joules</item>
        <item>Kilojoules</item>
        <item>Watt Hours</item>
        <item>Kilowatt Hours</item>
        <item>Calories (Thermochemical)</item>
        <item>Calories (IT)</item>
        <item>Calories (Food)</item>
        <item>Foot-Pounds</item>
        <item>British Thermal Units (Thermochemical)</item>
        <item>British Thermal Units (IT)</item>
        <item>British Thermal Units (ISO)</item>
    </string-array>

    <string-array name="power">
        <item>Watts</item>
        <item>Kilowatts</item>
        <item>Megawatts</item>
        <item>Gigawatts</item>
        <item>Joules per Second</item>
        <item>Horsepower (Electrical)</item>
        <item>Horsepower (Mechanical)</item>
        <item>Pferdestarke</item>
        <item>Foot-Pounds per Minute</item>
        <item>BTUs (IT) per Minute</item>
    </string-array>

    <string-array name="torque">
        <item>Newton Meters</item>
        <item>Kilogram Meters</item>
        <item>Joules per Radian</item>
        <item>Pound-Inches</item>
        <item>Pound-Feet</item>
    </string-array>

    <string-array name="speed">
        <item>Meters per Second</item>
        <item>Kilometers per Second</item>
        <item>Kilometers per Hour</item>
        <item>Feet per Second</item>
        <item>Miles per Second</item>
        <item>Miles per Hour</item>
        <item>Knots</item>
        <item>Mach</item>
    </string-array>

    <string-array name="time">
        <item>Microseconds</item>
        <item>Milliseconds</item>
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Years</item>
    </string-array>

    <string-array name="data">
        <item>Bits</item>
        <item>Bytes</item>
        <item>Kilobits</item>
        <item>Kibibits</item>
        <item>Kilobytes</item>
        <item>Kibibytes</item>
        <item>Megabits</item>
        <item>Mebibits</item>
        <item>Megabytes</item>
        <item>Mebibytes</item>
        <item>Gigabits</item>
        <item>Gibibits</item>
        <item>Gigabytes</item>
        <item>Gibibytes</item>
        <item>Terabits</item>
        <item>Tebibits</item>
        <item>Terabytes</item>
        <item>Tebibytes</item>
        <item>Petabits</item>
        <item>Pebibits</item>
        <item>Petabytes</item>
        <item>Pebibytes</item>
    </string-array>

    <string-array name="angle">
        <item>Degrees</item>
        <item>Radians</item>
        <item>Gradians</item>
    </string-array>

    <string name="listen">Listen</string>
    <string name="listening">Listening</string>
    <string name="processing">Processing</string>
    <string name="is">is</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="defaults">Defaults</string>
    <string name="base">Numerical Base</string>
    <string-array name="base_names">
        <item>Hexadecimal</item>
        <item>Decimal</item>
        <item>Octal</item>
        <item>Binary</item>
    </string-array>
    <string-array name="base_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="angular_unit">Angular Unit</string>
    <string-array name="angular_unit_names">
        <item>Degree</item>
        <item>Radian</item>
    </string-array>
    <string-array name="angular_unit_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="app_store_link">https://play.google.com/store/apps/developer?id=Saraighat+Software</string>
    <string name="mit_license">Licensed under MIT License</string>
    <string name="copyright">Copyright © 2017 Saraighat Software - abhijeet080808</string>
    <string name="license_link">https://raw.githubusercontent.com/abhijeet080808/FlexiCalculator/master/LICENSE</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_location">github.com/abhijeet080808/FlexiCalculator</string>
    <string name="source_code_link">https://github.com/abhijeet080808/FlexiCalculator</string>
    <string name="bugs">Bugs and Feedback</string>
    <string name="bugs_location">github.com/abhijeet080808/FlexiCalculator/issues</string>
    <string name="bugs_link">https://github.com/abhijeet080808/FlexiCalculator/issues</string>
    <string name="third_party">Third Party Licenses</string>
    <string name="apache">Apache Commons</string>
    <string name="apache_summary">Licensed under Apache License, v 2.0\nCopyright © 2017 The Apache Software Foundation</string>
    <string name="apache_link">https://commons.apache.org/</string>
    <string name="teko">Teko Font</string>
    <string name="teko_summary">Licensed under Open Font License, v 1.1\nCopyright © 2014 Indian Type Foundry</string>
    <string name="teko_link">https://www.indiantypefoundry.com/</string>

</resources>
