<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saraighatsoftware.flexicalculator.SimpleCalcFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:gravity="center|end"
                android:textSize="70sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    style="?android:attr/buttonBarStyle">

                    <Button
                        android:id="@+id/button_seven"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/seven"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_eight"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/eight"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_nine"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/nine"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    style="?android:attr/buttonBarStyle">

                    <Button
                        android:id="@+id/button_four"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/four"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_five"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/five"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_six"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/six"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    style="?android:attr/buttonBarStyle">

                    <Button
                        android:id="@+id/button_one"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/one"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_two"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/two"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_three"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/three"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    style="?android:attr/buttonBarStyle">

                    <Button
                        android:id="@+id/button_dot"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/decimal"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_zero"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/zero"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_del"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/del"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                style="?android:attr/buttonBarStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_open_bracket"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/open_bracket"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/button_close_bracket"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/close_bracket"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_divide"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/divide"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button_multiply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/multiply"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button_subtract"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/subtract"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button_add"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/add"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/equal"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
